--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -64,6 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# update entity\n",
+    "\n",
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
@@ -87,10 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# update configuration manager\n",
     "class ConfigurationManager:\n",
     "    def __init__(\n",
     "        self,\n",
@@ -120,21 +123,120 @@
     "        )\n",
     "        \n",
     "        return data_ingestion_config\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "import zipfile\n",
+    "from mlProject import logger\n",
+    "from mlProject.utils.common import get_size "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self,config:DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "        \n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename , headers =  request.urlretrieve(\n",
+    "                \n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "                \n",
+    "                )\n",
+    "            logger.info(f\"{filename} downloaded! with headers : {headers}\")\n",
+    "        else:\n",
+    "            logger.info(f\"File already exists of size : {get_size(Path(self.config.local_data_file))}\")   \n",
+    "       \n",
+    "    def extract_zip_file(self):\n",
+    "        '''\n",
+    "        Extracts zip file into the data directory\n",
+    "        \n",
+    "        '''\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)  \n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)\n",
+    "                   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-03 02:03:43,586 : INFO : common : Directory created : artifacts]\n",
+      "[2024-07-03 02:03:43,589 : INFO : common : Directory created : artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-03 02:03:44,833 : INFO : 4041011692 : artifacts/data_ingestion/data.zip downloaded! with headers : Connection: close\n",
+      "Content-Length: 87168\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"5ae5ec064d7b52cde534dabc74558ffc8d23a9de45faef320dceee43790a1ed8\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 8F30:3B565:11002:187A1:66846426\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Tue, 02 Jul 2024 20:33:44 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-bom4726-BOM\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1719952424.490663,VS0,VE341\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 4dff82f3fc3a7f41f3e4fb0aed5f3cff0493f2c8\n",
+      "Expires: Tue, 02 Jul 2024 20:38:44 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
